[gd_scene load_steps=3 format=3 uid="uid://b68aet2v6aw72"]

[ext_resource type="Script" uid="uid://csrxaqk3fjr4l" path="res://src/ui/super_hud/player_state_panel.gd" id="1_dvbf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1md6"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.21960784)

[node name="PlayerStatePanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 8.0
offset_bottom = 25.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1md6")
script = ExtResource("1_dvbf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Actions: "

[node name="Actions" type="Label" parent="VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Position: "

[node name="Position" type="Label" parent="VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Velocity: "

[node name="Velocity" type="Label" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Att. Side: "

[node name="AttachmentSide" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Att. Pos.: "

[node name="AttachmentPosition" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Att. Nor.: "

[node name="AttachmentNormal" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2
